# whisper-stt

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  README.md  SPEC.md  pyproject.toml
.planning/: ubuntu-gnome-migration.md
contrib/: whisper-stt.service
contrib/bar-widget/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
contrib/bar-widget/src/: App.tsx  index.css  vite-plugin-mock-api.ts
contrib/bar-widget/src/components/: BarWidget.tsx
contrib/bar-widget/src/components/ui/: button.tsx  dropdown-menu.tsx
contrib/bar-widget/src/hooks/: useStatus.ts
contrib/bar-widget/src/lib/: utils.ts
contrib/waybar/: README.md  stt-status.py  style.css
src/whisper_stt/: __init__.py  cli.py  diarization.py  hotkey.py  markdown.py  meeting.py  realtime.py  title_generator.py  transcriber.py  tray.py  typing.py
src/whisper_stt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/whisper_stt/gui/: __init__.py  file_picker.py  main_window.py  progress.py  theme.py
src/whisper_stt/service/: __init__.py  daemon.py
